/*
 * Copyright (c) 2022-present Doodle. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package doodle.design.dataseer;

import "google/protobuf/struct.proto";
import "doodle/design/common/log.proto";

option java_multiple_files = true;
option java_package = "org.doodle.design.dataseer";
option java_outer_classname = "DataSeerStructProto";

enum DataSeerErrorCode {
  FAILURE = 0;
}

message ReportLog {
  string role_id = 1;
  string content = 2;
  string tag = 3;
  map<string, string> vars = 4;
}

message ReportLogList {
  repeated ReportLog report_log = 1;
}

message TracingLog {
  doodle.design.common.LogMessageInfo log_message = 1;
}

message TracingLogList {
  repeated TracingLog tracing_log = 1;
}

message OperationLog {
  string user = 1;
  string content = 2;
}

message OperationLogList {
  repeated OperationLog operation_log = 1;
}

message BILog {
}
